completed title section and created carousel

--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@shopify/theme-currency": "3.0.0",
     "@shopify/theme-images": "3.0.0",
     "@shopify/theme-sections": "3.0.0",
-    "sass-mq": "^5.0.0",
+    "flickity": "^2.2.1",
     "jquery": "^3.5.0",
     "lodash-es": "^4.17.4",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "sass-mq": "^5.0.0"
   },
   "scripts": {
     "start": "slate-tools start",
